infrastructure/vault/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: false  # force SSL redirect (only port 443)
    nginx.ingress.kubernetes.io/configuration-snippet: |
      # uncomment to force SSL redirect with custom port
      # if ($scheme = http) { return 308 https://$host:8443$request_uri; }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vault.127.0.0.1.nip.io
  rules:
    - host: vault.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
...
